--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,16 @@
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
-        }
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach Debugger to Server",
+            "port": 9229,
+            "skipFiles": [
+                "<node_internals>/**",
+            ],
+            "restart": true
+        },
     ]
 }
