--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "nest-commander": "^3.9.0",
+        "nest-winston": "^1.9.3",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.2.0"
+        "rxjs": "^7.2.0",
+        "winston": "^3.10.0"
     },
     "devDependencies": {
         "@golevelup/ts-jest": "^0.3.7",
