--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@nestjs/swagger": "^7.0.4",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
+        "express": "^4.18.2",
         "nest-commander": "^3.9.0",
         "nest-winston": "^1.9.3",
         "reflect-metadata": "^0.1.13",
