--- a/charts/dbildungs-iam-server/Chart.yaml
+++ b/charts/dbildungs-iam-server/Chart.yaml
@@ -4,3 +4,8 @@ version: 0.2.0
 description: dBildungs-IAM-server
 type: application
 appVersion: ""
+dependencies:
+- name: redis-cluster
+  repository: https://charts.bitnami.com/bitnami
+  version: 10.0.1
+  condition: redis-cluster.enabled
