--- a/charts/dbildungs-iam-server/Chart.yaml
+++ b/charts/dbildungs-iam-server/Chart.yaml
@@ -5,7 +5,7 @@ description: dBildungs-IAM-server
 type: application
 appVersion: ""
 dependencies:
-- name: redis
+- name: redis-cluster
   repository: https://charts.bitnami.com/bitnami
-  version: 19.1.2
-  condition: redis-cluster.redis.enabled
+  version: 10.0.1
+  condition: redis-cluster.enabled
