--- a/charts/dbildungs-iam-server/values.yaml
+++ b/charts/dbildungs-iam-server/values.yaml
@@ -179,3 +179,5 @@ redis-cluster:
   ## @param serviceAccount.create Specifies whether a ServiceAccount should be created
   ##
     create: false
+  configmap: "dbildungs-iam-server-redis-tls-data"
+            
