dbp-104-add import-values

--- a/charts/dbildungs-iam-server/Chart.yaml
+++ b/charts/dbildungs-iam-server/Chart.yaml
@@ -9,3 +9,5 @@ dependencies:
   repository: https://charts.bitnami.com/bitnami
   version: 10.0.2
   condition: redis-cluster.enabled
+  import-values:
+    - redis-values.yaml
