--- a/charts/dbildungs-iam-server/Chart.yaml
+++ b/charts/dbildungs-iam-server/Chart.yaml
@@ -9,5 +9,5 @@ dependencies:
   repository: https://charts.bitnami.com/bitnami
   version: 10.0.2
   condition: redis-cluster.enabled
-  import-values:
-    - redis-values.yaml
+  import:
+     - values: redis-values.yaml
