--- a/charts/dbildungs-iam-server/templates/redis-values.yaml
+++ b/charts/dbildungs-iam-server/templates/redis-values.yaml
@@ -1,4 +1,3 @@
 redis-cluster:
   redis:
-      configmap: "dbildungs-iam-server-redis-tls-data"
-      defaultConfigOverride: "dbildungs-iam-server-redis-tls-data"
+    configmap: dbildungs-iam-server-redis-tls-data
