dbp-104- correct the syntax of import-values

--- a/charts/dbildungs-iam-server/Chart.yaml
+++ b/charts/dbildungs-iam-server/Chart.yaml
@@ -9,4 +9,6 @@ dependencies:
   repository: https://charts.bitnami.com/bitnami
   version: 10.0.2
   condition: redis-cluster.enabled
-  import-values: redis-values.yaml
+  import-values:
+    - child: configmap.dbildungs-iam-server-redis-tls-data
+      parent: redis.configmap
