dbp-104- add extra volumes

--- a/charts/dbildungs-iam-server/values.yaml
+++ b/charts/dbildungs-iam-server/values.yaml
@@ -181,4 +181,5 @@ redis-cluster:
     create: false
   redis:
     configmap: dbildungs-iam-server-redis-tls-data
+    extraVolumes: dbildungs-iam-server-redis-tls-data
     
