--- a/charts/dbildungs-iam-server/Chart.yaml
+++ b/charts/dbildungs-iam-server/Chart.yaml
@@ -9,6 +9,6 @@ dependencies:
   repository: https://charts.bitnami.com/bitnami
   version: 10.0.2
   condition: redis-cluster.enabled
-  import-values:
-    - child: configmap.dbildungs-iam-server-redis-tls-data
-      parent: redis.configmap
+  #import-values:
+  #  - child: configmap.dbildungs-iam-server-redis-tls-data
+  #    parent: redis.configmap
