dbp-104-set serviceName dbildungs-iam-server-redis  as under section of cluster

--- a/charts/dbildungs-iam-server/values.yaml
+++ b/charts/dbildungs-iam-server/values.yaml
@@ -171,6 +171,7 @@ redis-cluster:
       ## 1 means that we want a replica for every master created
       ##
       replicas: 1
+      serviceName: dbildungs-iam-server-redis   
   networkPolicy:
     ## @param networkPolicy.enabled Enable creation of NetworkPolicy resources
     ##
