--- a/config/config.json
+++ b/config/config.json
@@ -32,7 +32,7 @@
         "PORT": 6379,
         "USERNAME": "default",
         "PASSWORD": "password",
-        "USE_TLS": false
+        "USE_TLS": true
     },
     "DATA": {
         "ROOT_ORGANISATION_ID": "d39cb7cf-2f9b-45f1-849f-973661f2f057"
